# skerry

./: .gitignore  Cargo.toml  LICENSE.md  README.md  flake.nix  rust-analyzer.json
berrors/: Cargo.toml
berrors/src/: helpers.rs  lib.rs  macros.rs
examples/code-gen/: Cargo.toml  build.rs
examples/code-gen/src/: main.rs
examples/codegen/: Cargo.toml  build.rs
examples/codegen/src/: errors.rs  main.rs
proc_berrors/: Cargo.toml
proc_berrors/src/: lib.old.rs  lib.rs
proc_berrors/src/internal/: error_module.rs  fn_error.rs  impl_missing_converts.rs
skerry/: Cargo.toml
skerry-codegen/: Cargo.toml
skerry-codegen/src/: lib.rs  writer.rs
skerry-macros/: Cargo.toml  README.md
skerry-macros/src/: code_gen.rs  lib.rs
skerry-macros/src/internal/: impl_converts.rs  impl_missing_converts.rs  skerry_fn.rs  skerry_mod.rs  skerry_trait.rs
skerry/src/: lib.rs  macros.rs  test.rs  traits.rs
skerry_macros/: Cargo.toml
skerry_macros/src/: lib.old.rs  lib.rs
skerry_macros/src/internal/: error_module.rs  fn_error.rs  impl_missing_converts.rs  skerry_fn.rs  skerry_impl.rs  skerry_mod.rs  skerry_trait.rs
