[workspace]
resolver = "3"
members = ["skerry-macros", "skerry", "examples/codegen", "skerry-codegen"]

[workspace.dependencies]
skerry = { path = "./skerry", version = "0.1.7" }
skerry-macros = { path = "./skerry-macros", version = "0.1.5" }
skerry-codegen = { path = "./skerry-codegen", version = "0.1.0" }
