[package]
name = "skerry-codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2.5.0"
hashbrown = "0.17.0"
syn = { version = "2.0.117", features = ["full", "visit", "parsing", "extra-traits"] }
topological-sort = "0.2.2"
proc-macro2 = {version = "1.0.106", features = ["span-locations"]}
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", default-features = false }
