[package]
name = "skerry"
version = "0.1.3"
edition = "2024"
authors = ["Zkojin <zkojin@proton.me>"]
description = "Super Kool ERRors Yoh - A type-safe, zero-boilerplate error management framework."
documentation = "https://docs.rs/skerry"
repository = "https://github.com/zko-jin/skerry"
readme = "../README.md"
keywords = ["error", "proc-macro", "result", "boilerplate", "type-safety"]
categories = ["rust-patterns", "development-tools"]
license = "MIT"

[dependencies]
skerry_macros = { version = "0.1.1", path = "../skerry_macros" }
const_panic = "0.2.15"
paste = "1.0.15"
