[package]
name = "skerry"
version = "0.1.7"
edition = "2024"
authors = ["Zkojin <zkojin@proton.me>"]
description = "Super Kool ERRors Yoh - A type-safe, zero-boilerplate error management framework."
documentation = "https://docs.rs/skerry"
repository = "https://github.com/zko-jin/skerry"
readme = "../README.md"
keywords = ["error", "proc-macro", "result", "boilerplate", "type-safety"]
categories = ["rust-patterns", "development-tools"]
license = "MIT"

[dependencies]
skerry-macros = { workspace = true }
paste = "1.0.15"

[features]
default = []
custom-result = ["skerry-macros/custom-result"]
codegen = ["skerry-macros/codegen"]
