[package]
name = "skerry_macros"
version = "0.1.0"
edition = "2024"
authors = ["Zkojin <zkojin@proton.me>"]
description = "Proc macros for skerry."
documentation = "https://docs.rs/skerry"
repository = "https://github.com/zko-jin/skerry"
readme = "README.md"
keywords = ["error", "proc-macro", "result", "boilerplate", "type-safety"]
categories = ["rust-patterns", "development-tools"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
