[package]
name = "skerry_macros"
version = "0.1.5"
edition = "2024"
authors = ["Zkojin <zkojin@proton.me>"]
description = "Proc macros for skerry."
documentation = "https://docs.rs/skerry"
repository = "https://github.com/zko-jin/skerry"
readme = "README.md"
keywords = ["error", "proc-macro", "result", "boilerplate", "type-safety"]
categories = ["rust-patterns", "development-tools"]
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.117", features = ["full", "visit-mut"] }
quote = "1.0.45"
proc-macro2 = "1.0.106"
cfg-if = "1.0.4"

[features]
default = []
custom_result = []
