[package]
name = "code-gen"
version = "0.1.0"
edition = "2024"

# [lints]
# workspace = true

[dependencies]
skerry = { workspace = true, features = ["code-gen"] }

[build-dependencies]
walkdir = "2.5.0"
hashbrown = "0.17.0"
syn = { version = "2.0.117", features = ["full", "visit", "parsing", "extra-traits"] }
quote = "1.0.45"
proc-macro2 = {version = "1.0.106", features = ["span-locations"]}
